vlib/v/checker/tests/unsafe_deref_assign_err.vv
c := 0
cref := &c

*cref = 1
(*cref) = 1
